# quant-data-engine-lab

./: .gitignore  README.md  pyproject.toml
chapters/01-data-engine/: README.md  run_demo.py  sample_prices.csv
data/raw/akshare/: 000001_SZ_daily_20250629_20260629.csv  601138_daily_20250630_20260629.csv  README.md
docs/: index.html
scripts/: fetch_akshare_daily.py  plot_daily_close.py
src/quant_data_engine/: __init__.py  cache.py  engine.py  models.py  sources.py
tests/: test_data_engine.py
